update uranium css

--- a/documentation/grouping.html
+++ b/documentation/grouping.html
@@ -64,5 +64,5 @@ more_selected: selected
   <p>Uranium then searches through the HTML document for the special data attributes we use to add functionality to HTML elements. Once it sees an attribute that begins with <span class="inline_code">data-ur</span>, it looks for groups of components. The ur-set allows it to determine what interaction we're defining.</p>
   <p>Next, the JavaScript looks for ur-ids on a component. If it finds a ur-id, it uses this to determine which other compoments on the page it should treat as part of the same Uranium interaction.</p>
   <p>This is explained visually in the flowchart below.</p>
-  <img id="flowchart" class="media-block" src="/images/uranium_flowchart.png" /> 
+  <img id="flowchart" class="media-block" src="{{site.baseurl}}images/uranium_flowchart.png" /> 
 </div>
