--- a/interactions/geocode/button.html
+++ b/interactions/geocode/button.html
@@ -23,7 +23,7 @@ interaction_selected: selected
     <h3>Example</h3>
     <div class="subpane">
       <form data-ur-set="reverse-geocode">
-        <a class="btn" href="javascript:void(0)" data-ur-reverse-geocode-component="rg-button">Click here to find your location</a>
+        <a class="btn" data-ur-reverse-geocode-component="rg-button">Click here to find your location</a>
         <input type="text" placeholder="Street Address" data-ur-reverse-geocode-component="rg-street">
         <input type="text" placeholder="City" data-ur-reverse-geocode-component="rg-city">
         <input type="text" placeholder="Zip" data-ur-reverse-geocode-component="rg-zip">
