--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -75,7 +75,7 @@ documentation_selected: selected
     <section id="recommended_styles">
       <h2>Recommended Styles</h2>
       <p>Uranium tries to be as unopinionated as possible when it comes to styling. Uraniun interactions typically perform their magic by adding, removing, or changing the values associated with data attributes on HTML elements. How you choose to style these different states is entirely up to you.</p>
-      <p>That said, there are some basic types of styles that will be needed to see how the Uranium interactions behave. Generally, you are going to want the toggler interaction to toggle whether or not that toggler's content can be seen. One way to do that&#8202;&mdash;&#8202;although by no means the only way&#8202;&mdash;&#8202;is to have the CSS apply a rule of <code>display: block</code> to toggler content when it is supposed to be seen, and a rule of <code>display: none</code> when it is not supposed to be seen.</p>
+      <p>That said, there are some basic types of styles that will be needed to see how the Uranium interactions behave. Generally, you are going to want the toggler interaction to toggle whether or not that toggler's content can be seen. One way to do that &mdash; although by no means the only way &mdash; is to have the CSS apply a rule of <code>display: block</code> to toggler content when it is supposed to be seen, and a rule of <code>display: none</code> when it is not supposed to be seen.</p>
       <p>On the pages describing each of the Uranium interactions, you can see some basic recommended styles that will make that interaction's behavior visible. But those are for demonstration purposes only. Uranium can be used with any CSS you can dream up!</p>
     </section>
 
