--- a/documentation/philosophy.html
+++ b/documentation/philosophy.html
@@ -16,6 +16,6 @@ more_selected: selected
     <p>That's right: you don't need to touch a single line of JavaScript. Uranium uses the 'declarative' JavaScript style, a model that looks for how HTML elements are formatted. Then, it constructs all the necessary JavaScript magic to make those elements come to life.</p>
     
     <h2>Uranium is not designed for executing logic or site functions</h2>
-    <p>Uranium makes the view (your UI/UX) rely on the model (your HTML). The declarative aspect is not designed for performing functions. You wouldn't want to add attributes to an element to perform some JS logic (this is exactly why "onclicks" should be avoided)&#8202;&mdash;&#8202;that's what events/listeners/callbacks are for.</p>
+    <p>Uranium makes the view (your UI/UX) rely on the model (your HTML). The declarative aspect is not designed for performing functions. You wouldn't want to add attributes to an element to perform some JS logic (this is exactly why "onclicks" should be avoided) &mdash; that's what events/listeners/callbacks are for.</p>
   </div>
 </div>
