--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ name: home
 <div id="page" class="copy">
   <h1>What is Uranium?</h1>
   <p>
-    Uranium is a set of interactions&#8202;&mdash;&#8202;self-contained bits of code that allow you to do neat, interactive things on your website.
+    Uranium is a set of interactions &mdash; self-contained bits of code that allow you to do neat, interactive things on your website.
   </p>
   
   <h3>How to Use:</h3>
