--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -133,7 +133,7 @@ advanced_tab:
 
 <h3>Infinite Scrolling</h3>
 <p>
-  Here we have a carousel that loops from front to back (default state for carousel). The carousel also has a custom count template, and indicator dots showing what item is currently selected. The indicator dots have a <code>data-ur-state</code> of "inactive" until the corresponding item is selected, when the <code>data-ur-state</code> changes to "active"&#8202;&mdash;&#8202;you can use this for styling the dots.
+  Here we have a carousel that loops from front to back (default state for carousel). The carousel also has a custom count template, and indicator dots showing what item is currently selected. The indicator dots have a <code>data-ur-state</code> of "inactive" until the corresponding item is selected, when the <code>data-ur-state</code> changes to "active" &mdash; you can use this for styling the dots.
 </p>
 <dl>
   <dt><code>data-ur-carousel-component="dots"</code></dt>
