--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -88,10 +88,10 @@ documentation_selected: selected
       <h3>Additional Documentation</h3>
       <p>We've written up some more detailed notes on some of the ways in which Uranium is unique. Uranium is not trying to be all things to all people, but for those who need something lightweight, unopinionated, and focused on injecting simple interactions in a declarative manner, Uranium just may be the answer.</p>
       <ul>
-        <li><a href="{{site.url}}philosophy.html">Philosophy</a> &mdash; The guiding philosophy behind Uranium and the interactions we support</li>
-        <li><a href="{{site.url}}model.html">Model</a> &mdash; general information about the model on which all the interactions are based</li>
-        <li><a href="{{site.url}}styling.html">Styling</a> &mdash; "lazy" and "explicit" styling of interactions</li>
-        <li><a href="{{site.url}}grouping.html">Grouping</a> &mdash; when to use sets and when to use IDs</li>
+        <li><a href="{{site.baseurl}}documentation/philosophy.html">Philosophy</a> &mdash; The guiding philosophy behind Uranium and the interactions we support</li>
+        <li><a href="{{site.baseurl}}documentation/model.html">Model</a> &mdash; general information about the model on which all the interactions are based</li>
+        <li><a href="{{site.baseurl}}documentation/styling.html">Styling</a> &mdash; "lazy" and "explicit" styling of interactions</li>
+        <li><a href="{{site.baseurl}}documentation/grouping.html">Grouping</a> &mdash; when to use sets and when to use IDs</li>
       </ul>
     </section>
 
