--- a/documentation/styling.html
+++ b/documentation/styling.html
@@ -45,7 +45,7 @@ more_selected: selected
       opacity: 1.0;
     }
     </pre>
-    <p>On a modern desktop computer, Uranium works too fast to notice the non-assigned state. However, on mobile devices you can sometimes see a delay. You can sometimes see the delay if you refresh the <a href="/interactions/carousel.html#vertical">carousel examples</a> page.</p>
+    <p>On a modern desktop computer, Uranium works too fast to notice the non-assigned state. However, on mobile devices you can sometimes see a delay. You can sometimes see the delay if you refresh the <a href="/interactions/carousel.html#demonstration">carousel examples</a> page.</p>
     <p>And that's how we style things explicitly, rather than lazily.</p>
   </div>
 </div>
