--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ name: home
     We define interactions as behaviors that enhance the functionality of a set of HTML elements. Uranium defines several <em>data attributes</em> you can give to your HTML elements, allowing your users to interact with them in a new way.
   </p>
   <p>
-    We've created pages to describe each interaction provided by Uranium, accessible from the menu above. While you're up there, you might also want to check out the Training menu for our <a href="{{site.url}}documentation/overview.html">overview documentation</a>, <a href="{{site.url}}documentation/getting_started.html">getting started tutorial</a>, and <a href="{{site.url}}documentation/advanced.html">advanced tutorial</a>.
+    We've created pages to describe each interaction provided by Uranium, accessible from the menu above. While you're up there, you might also want to check out the Training menu for our <a href="{{site.baseurl}}documentation/overview.html">overview documentation</a>, <a href="{{site.baseurl}}documentation/getting_started.html">getting started tutorial</a>, and <a href="{{site.baseurl}}documentation/advanced.html">advanced tutorial</a>.
   </p>
   
   <h1>Top Ways to Use Uranium</h1>
