--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -69,7 +69,7 @@ advanced_tab:
     autoscrollStart(): start autoscroll
     autoscrollStop(): stop autoscroll
 ---
-<h2>Demonstration</h2>
+<h2 id="demonstration">Demonstration</h2>
 <div class="d-row d-gutters">
   <div class="d-col-6">
     <h3>Example</h3>
@@ -81,14 +81,14 @@ advanced_tab:
           <span data-ur-carousel-component="count"></span>
         </p>
         <div data-ur-carousel-component="scroll_container">
-          <img data-ur-carousel-component="item" src="{{site.url}}../images/sample1.png" alt="1">
-          <img data-ur-carousel-component="item" src="{{site.url}}../images/sample2.png" alt="2">
-          <img data-ur-carousel-component="item" src="{{site.url}}../images/sample3.png" alt="3">
-          <img data-ur-carousel-component="item" src="{{site.url}}../images/sample4.png" alt="4">
-          <img data-ur-carousel-component="item" src="{{site.url}}../images/sample5.png" alt="5">
-          <img data-ur-carousel-component="item" src="{{site.url}}../images/sample6.png" alt="6">
-          <img data-ur-carousel-component="item" src="{{site.url}}../images/sample7.png" alt="7">
-          <img data-ur-carousel-component="item" src="{{site.url}}../images/sample8.png" alt="8">
+          <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample1.png" alt="1">
+          <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample2.png" alt="2">
+          <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample3.png" alt="3">
+          <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample4.png" alt="4">
+          <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample5.png" alt="5">
+          <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample6.png" alt="6">
+          <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample7.png" alt="7">
+          <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample8.png" alt="8">
         </div>
       </div>
     </div>
@@ -149,14 +149,14 @@ advanced_tab:
       <a data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</a>
       <a data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</a>
       <div data-ur-carousel-component="scroll_container">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample1.png" alt="1">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample2.png" alt="2">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample3.png" alt="3">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample4.png" alt="4">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample5.png" alt="5">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample6.png" alt="6">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample7.png" alt="7">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample8.png" alt="8">
+        <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample1.png" alt="1">
+        <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample2.png" alt="2">
+        <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample3.png" alt="3">
+        <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample4.png" alt="4">
+        <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample5.png" alt="5">
+        <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample6.png" alt="6">
+        <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample7.png" alt="7">
+        <img data-ur-carousel-component="item" src="{{site.baseurl}}images/sample8.png" alt="8">
       </div>
     </div>
   </div>
@@ -168,14 +168,14 @@ advanced_tab:
       <a data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</a>
       <a data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</a>
       <div data-ur-carousel-component="scroll_container">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample1.png" alt="1">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample2.png" alt="2">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample3.png" alt="3">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample4.png" alt="4">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample5.png" alt="5">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample6.png" alt="6">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample7.png" alt="7">
-        <img data-ur-carousel-component="item" src="{{site.url}}../images/sample8.png" alt="8">
+        <img data-ur-carousel-component="item" src="images/sample1.png" alt="1">
+        <img data-ur-carousel-component="item" src="images/sample2.png" alt="2">
+        <img data-ur-carousel-component="item" src="images/sample3.png" alt="3">
+        <img data-ur-carousel-component="item" src="images/sample4.png" alt="4">
+        <img data-ur-carousel-component="item" src="images/sample5.png" alt="5">
+        <img data-ur-carousel-component="item" src="images/sample6.png" alt="6">
+        <img data-ur-carousel-component="item" src="images/sample7.png" alt="7">
+        <img data-ur-carousel-component="item" src="images/sample8.png" alt="8">
       </div>
     </div>
     {% endcapture %}
