--- a/interactions/toggler.html
+++ b/interactions/toggler.html
@@ -80,7 +80,7 @@ advanced_tab:
     </pre>
   </div>
 </div>
-<hr/>
+<hr>
 
 <h2>Toggler Examples</h2>
 
@@ -171,5 +171,5 @@ advanced_tab:
 </div>
 
 <h3>Toggler Drawer Example</h3>
-<a href="{{site.url}}drawer.html" target="_blank">Demonstrates styling and formatting for a horizontal sliding menu</a>
+<a href="{{site.baseurl}}interactions/drawer.html" target="_blank">Demonstrates styling and formatting for a horizontal sliding menu</a>
 <p>Note: This example uses WebKit-specific CSS to activate the visual drawer behavior, but the Uranium behavior is the same across all browsers, and you may implement the visual effects any way you prefer.</p>
