--- a/interactions/zoom.html
+++ b/interactions/zoom.html
@@ -44,7 +44,7 @@ advanced_tab:
     <h3>Example</h3>
     <div class="subpane">
       <div data-ur-set="zoom">
-        <img data-ur-zoom-component="img" src="{{site.baseurl}}images/pic5.jpeg" data-ur-src="{{site.baseurl}}images/pic4.jpeg">
+        <img data-ur-zoom-component="img" src="{{site.baseurl}}images/pic1.jpg" data-ur-src="{{site.baseurl}}images/pic2.jpg">
         <div data-ur-zoom-component="button">
           <span>+</span>
           <span>&minus;</span>
@@ -57,7 +57,7 @@ advanced_tab:
     <h3>The Code</h3>
     {% capture tmp %}
     <div data-ur-set="zoom">
-      <img data-ur-zoom-component="img" src="images/pic5.jpeg" data-ur-src="images/pic4.jpeg">
+      <img data-ur-zoom-component="img" src="images/pic1.jpg" data-ur-src="images/pic2.jpg">
       <div data-ur-zoom-component="button">
         <span>+</span>
         <span>&minus;</span>
