--- a/documentation/model.html
+++ b/documentation/model.html
@@ -7,7 +7,7 @@ more_selected: selected
 <div id="page" class="copy">
   <h1>Model</h1>
   
-  <h2 name="naming">Naming</h2>
+  <h2 id="naming">Naming</h2>
   <p>The attributes in Uranium are fairly lengthy. This is because we have chosen to follow the conventions of HTML5.</p>
   <p>In HTML4, we weren't allowed to create our own attributes for HTML elements, beyond those defined in the specifications. In HTML5, we can create new attributes by extending the data attribute &mdash; but we have to start every attribute with "data". That's why all of Uranium's custom attributes use "<code>data-</code>" at the beginning. After that, we include "<code>ur-</code>" to signify that the attribute we are creating is for Uranium.</p>
   <p>After those two, the names of the attributes are defined consistently depending on what type of set or component we are defining. For example, a "<code>data-ur-set</code>" element helps define the enclosed set of HTML elements as a unified interaction by grouping them into a set (giving the name of the interaction as a value).</p>
