add back banner

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ title: Home
 name: home
 ---
 
+<div id="banner" class="m-hide">
+  <div class="content">
+    <div class="pull-left">Fast, Lean Web Interaction Library.</div>
+    <small>*for mobile too!</small>
+  </div>
+</div>
 <div id="page" class="copy">
   <h1>What is Uranium?</h1>
   <p>
