--- a/documentation/model.html
+++ b/documentation/model.html
@@ -12,8 +12,8 @@ more_selected: selected
   <p>In HTML4, we weren't allowed to create our own attributes for HTML elements, beyond those defined in the specifications. In HTML5, we can create new attributes by extending the data attribute &mdash; but we have to start every attribute with "data". That's why all of Uranium's custom attributes use "<code>data-</code>" at the beginning. After that, we include "<code>ur-</code>" to signify that the attribute we are creating is for Uranium.</p>
   <p>After those two, the names of the attributes are defined consistently depending on what type of set or component we are defining. For example, a "<code>data-ur-set</code>" element helps define the enclosed set of HTML elements as a unified interaction by grouping them into a set (giving the name of the interaction as a value).</p>
   
-  <h2>Declarative Javascript</h2>
-  <p>Uranium works with declarative Javascript. What this means is that we give elements in the HTML specific attributes. These attributes tell the Javascript what to do.</p>
+  <h2>Declarative JavaScript</h2>
+  <p>Uranium works with declarative JavaScript. What this means is that we give elements in the HTML specific attributes. These attributes tell the JavaScript what to do.</p>
   <p>Here are a couple of simple examples:</p>
   {% capture tmp %}
   <div data-ur-set="toggler"></div>
