--- a/interactions/drawer.html
+++ b/interactions/drawer.html
@@ -208,7 +208,7 @@
       <li><a id="makeScroll" href="javascript:void(0)">Toggle scrollable drawer, fixed page</a></li>
       <li><a id="makeRight" href="javascript:void(0)">Toggle Drawer on right</a></li>
     </ul>
-    <p>The particular classes being applied to the body element are just being used as an example, as is the ability to turn them on and off with Javascript. You may write your drawer page using any classes or attributes you choose, and target them with any CSS that suits your needs.</p>
+    <p>The particular classes being applied to the body element are just being used as an example, as is the ability to turn them on and off with JavaScript. You may write your drawer page using any classes or attributes you choose, and target them with any CSS that suits your needs.</p>
     <div id="mask" data-ur-toggler-component="button"></div>
   </div>
   </div>
