--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -11,7 +11,7 @@ documentation_selected: selected
 
     <section id="uranium_introduction">
       <h2>Introduction to Uranium</h2>
-      <p>Uranium offers web page authors the ability to add several convenient Javascript interactions to the HTML elements on their pages, without writing a single line of Javascript.</p>
+      <p>Uranium offers web page authors the ability to add several convenient JavaScript interactions to the HTML elements on their pages, without writing a single line of JavaScript.</p>
       <p>For example, you might have a page with a set of sub-sections that each have headers followed by related content, one right after the other. With the Uranium toggler interaction, you could transform that into an accordion just by adding a few data attributes to the existing HTML elements.</p>
       <p>Uranium interactions are not opinionated about styling and layout. You should be able to add the Uranium script and a few data attributes to practically any working web page that uses jQuery (as far back as version 1.3), and take advantage of these useful interactions right where you need them most.</p>
     </section>
@@ -43,7 +43,7 @@ documentation_selected: selected
 
     <section id="data_attributes">
       <h2>Data Attributes</h2>
-      <p>Data attributes can be added to any HTML element. We use data attributes instead of modifying the <code>id</code> or <code>class</code> attributes of HTML elements so that Uranium can be injected into existing pages as easily as it can be added to new pages, without affecting existing styles and Javascript.</p>
+      <p>Data attributes can be added to any HTML element. We use data attributes instead of modifying the <code>id</code> or <code>class</code> attributes of HTML elements so that Uranium can be injected into existing pages as easily as it can be added to new pages, without affecting existing styles and JavaScript.</p>
       <p>The syntax is simple. Just add the data attributes the same way you would add any other attributes to an HTML element. For example, to tell Uranium that a specific <code>&lt;h2&gt;</code> element should be used as a toggle button to show and hide the following paragraph, you might start with something like this:</p>
       {% capture tmp %}
       <div>
@@ -80,7 +80,7 @@ documentation_selected: selected
     <section id="additional_resources">
       <h2>Additional Resources</h2>
       <h3>Tutorials</h3>
-      <p>To familiarize yourself with how Uranium can be added to a page, we've written up some tutorials demonstrating how to work through a basic and an advanced Uranium use-case. As you'll see, even the advanced example follows the same basic philosophy, allowing you to integration useful Javascript interactions just by adding a few declarative elements to your HTML.</p>
+      <p>To familiarize yourself with how Uranium can be added to a page, we've written up some tutorials demonstrating how to work through a basic and an advanced Uranium use-case. As you'll see, even the advanced example follows the same basic philosophy, allowing you to integration useful JavaScript interactions just by adding a few declarative elements to your HTML.</p>
       <ul>
         <li><a href="/documentation/getting_started.html">Basic Use</a> &mdash; Creating a simple toggler</li>
         <li><a href="/documentation/advanced.html">Advanced Use</a> &mdash; Building a custom carousel with optional features</li>
